[package]
name = "findfriends"
version = "0.1.0"
edition = "2021"
# author = "YourButterfly"
# about = "find your friends by starred repos"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.114"
serde_json = "1.0"
serde_derive = "1.0.114"